Fixade modal bredd och z-index

--- a/css/loginsignup.css
+++ b/css/loginsignup.css
@@ -1,7 +1,7 @@
 #login, #register{
     position: fixed;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     z-index: 2;
     background-color: rgba(0, 0, 0, 0.404);
     display: flex;
